[gd_scene load_steps=52 format=2]

[ext_resource path="res://assets/textures/character/player_frames/player_up_fireball_2.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/character/player_frames/player_up_fireball_1.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/character/player_frames/player_left_fireball_2.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/character/player_frames/player_right_fireball_2.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/character/player_frames/player_up_walk_2.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/character/player_frames/player_right_fireball_1.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/character/player_frames/player_right_walk_1.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/character/player_frames/player_down_fireball_1.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/character/player_frames/player_right_idle_2.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/character/player_frames/player_up_idle_2.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/character/player_frames/player_down_idle_1.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/character/player_frames/player_down_walk_1.png" type="Texture" id=12]
[ext_resource path="res://assets/textures/character/player_frames/player_down_walk_2.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/character/player_frames/player_left_idle_1.png" type="Texture" id=14]
[ext_resource path="res://assets/textures/character/player_frames/player_left_walk_2.png" type="Texture" id=15]
[ext_resource path="res://assets/textures/character/player_frames/player_left_idle_2.png" type="Texture" id=16]
[ext_resource path="res://assets/textures/character/player_frames/player_up_idle_1.png" type="Texture" id=17]
[ext_resource path="res://assets/textures/character/player_frames/player_down_idle_2.png" type="Texture" id=18]
[ext_resource path="res://assets/textures/character/player_frames/player_left_walk_1.png" type="Texture" id=19]
[ext_resource path="res://assets/textures/character/player_frames/player_right_walk_2.png" type="Texture" id=20]
[ext_resource path="res://assets/textures/character/player_frames/player_right_idle_1.png" type="Texture" id=21]
[ext_resource path="res://assets/textures/character/player_frames/player_down_fireball_2.png" type="Texture" id=22]
[ext_resource path="res://scenes/entities/player/PlayerScript.gd" type="Script" id=23]
[ext_resource path="res://scenes/entities/player/PlayerEffects.gd" type="Script" id=24]
[ext_resource path="res://assets/textures/character/player_frames/player_left_attack_2.png" type="Texture" id=25]
[ext_resource path="res://assets/textures/character/player_frames/player_up_attack_1.png" type="Texture" id=26]
[ext_resource path="res://assets/textures/character/player_frames/player_up_attack_2.png" type="Texture" id=27]
[ext_resource path="res://assets/textures/character/player_frames/player_left_attack_1.png" type="Texture" id=28]
[ext_resource path="res://assets/textures/character/player_frames/player_left_fireball_1.png" type="Texture" id=29]
[ext_resource path="res://assets/textures/character/player_frames/player_down_attack_1.png" type="Texture" id=30]
[ext_resource path="res://assets/textures/character/player_frames/player_right_attack_1.png" type="Texture" id=31]
[ext_resource path="res://assets/textures/character/player_frames/player_right_attack_2.png" type="Texture" id=32]
[ext_resource path="res://assets/textures/character/player_frames/player_up_walk_1.png" type="Texture" id=33]
[ext_resource path="res://assets/textures/effects/player/LevelUp!.png" type="Texture" id=34]
[ext_resource path="res://assets/textures/character/player_frames/player_down_attack_2.png" type="Texture" id=35]
[ext_resource path="res://scenes/entities/player/SFX.gd" type="Script" id=36]
[ext_resource path="res://scenes/entities/player/PickupZone.gd" type="Script" id=37]
[ext_resource path="res://scenes/gui/GUI.tscn" type="PackedScene" id=38]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "walk_left",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": false,
"name": "attack_up",
"speed": 7.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle_up",
"speed": 1.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 22 ) ],
"loop": false,
"name": "fireball_down",
"speed": 7.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ) ],
"loop": true,
"name": "idle_left",
"speed": 1.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk_down",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 17 ), ExtResource( 33 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk_up",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 29 ), ExtResource( 3 ) ],
"loop": false,
"name": "fireball_left",
"speed": 7.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 7 ), ExtResource( 21 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle_right",
"speed": 1.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 28 ), ExtResource( 25 ) ],
"loop": false,
"name": "attack_left",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 30 ), ExtResource( 35 ) ],
"loop": false,
"name": "attack_down",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle_down",
"speed": 1.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": false,
"name": "fireball_right",
"speed": 7.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": false,
"name": "fireball_up",
"speed": 7.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": false,
"name": "attack_right",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.77576, 10.7063 )

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "LvlUP",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 8.53711, 9.88821 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 23 )

[node name="GUI" parent="." instance=ExtResource( 38 )]

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "idle_down"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.683682, -1.29089 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )

[node name="PlayerEffects" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -9.60013e-06, -4.69688 )
scale = Vector2( 1.35077, 1.35537 )
frames = SubResource( 12 )
animation = "LvlUP"
frame = 5
playing = true
script = ExtResource( 24 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
script = ExtResource( 36 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
position = Vector2( -0.629944, -0.944962 )
shape = SubResource( 13 )

[connection signal="attack" from="." to="SFX" method="_on_Player_attack"]
[connection signal="death" from="." to="SFX" method="_on_Player_death"]
[connection signal="inventory_open" from="." to="GUI" method="_on_Player_inventory_open"]
[connection signal="pause" from="." to="GUI" method="_on_Player_pause"]
[connection signal="player_level_up" from="." to="PlayerEffects" method="_on_Player_player_level_up"]
[connection signal="player_level_up" from="." to="GUI" method="_on_Player_player_level_up"]
[connection signal="player_level_up" from="." to="SFX" method="_on_Player_player_level_up"]
[connection signal="player_stats_changed" from="." to="GUI" method="_on_Player_player_stats_changed"]
[connection signal="spell" from="." to="SFX" method="_on_Player_spell"]
[connection signal="animation_finished" from="Body" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="PlayerEffects" to="PlayerEffects" method="_on_PlayerEffects_animation_finished"]
[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
